langkit/sustained/src/gpr_parser.h

/*
 * This type represents a context for all source analysis. This is the first
 * type you need to create to use gpr_parser. It will contain the results of
 * all analysis, and is the main holder for all the data.
 *
 * You can create several analysis contexts if you need to, which enables you,
 * for example to:
 *
 * * analyze several different projects at the same time;
 *
 * * analyze different parts of the same projects in parallel.
 *
 * In the current design, contexts always keep all of their analysis units
 * allocated. If you need to get this memory released, the only option at your
 * disposal is to destroy your analysis context instance.
 *
 * This structure is partially opaque: some fields are exposed to allow direct
 * access, for performance concerns.
 */
typedef struct
{
   uint64_t serial_number;
} *gpr_analysis_context;
/*
 * This type represents the analysis of a single file.
 *
 * This type has strong-reference semantics and is ref-counted. Furthermore, a
 * reference to a unit contains an implicit reference to the context that owns
 * it. This means that keeping a reference to a unit will keep the context and
 * all the unit it contains allocated.
 *
 * This structure is partially opaque: some fields are exposed to allow direct
 * access, for performance concerns.
 */
typedef struct
{
   uint64_t version_number;
} *gpr_analysis_unit;
/*
 * Data type for all nodes. Nodes are assembled to make up a tree.  See the
 * node primitives below to inspect such trees.
 *
 * Unlike for contexts and units, this type has weak-reference semantics:
 * keeping a reference to a node has no effect on the decision to keep the unit
 * that it owns allocated. This means that once all references to the context
 * and units related to a node are dropped, the context and its units are
 * deallocated and the node becomes a stale reference: most operations on it
 * will raise a ``Stale_Reference_Error``.
 *
 * Note that since reparsing an analysis unit deallocates all the nodes it
 * contains, this operation makes all reference to these nodes stale as well.
 */
typedef void* gpr_base_node;
/*
 * Type to contain Unicode text data.
 */
typedef struct {
   int length;
   int ref_count;
   uint32_t content[1];
} *gpr_string_type;
typedef uint8_t gpr_bool;
/*
 * Location of a span of text in a source file.
 */
typedef struct {
    gpr_source_location start;
    gpr_source_location end;
} gpr_source_location_range;
/*
 * String encoded in UTF-32 (native endianness).
 */
typedef struct {
   /*
 * Address for the content of the string.
 */
    uint32_t *chars;
   /*
 * Size of the string (in characters).
 */
    size_t length;

    int is_allocated;
} gpr_text;
/*
 * Kind for this token.
 */
typedef enum {
   
      
      GPR_TERMINATION = 0
      ,
      GPR_LEXING_FAILURE = 1
      ,
      GPR_IDENTIFIER = 2
      ,
      GPR_ALL = 3
      ,
      GPR_ABSTRACT = 4
      ,
      GPR_AT = 5
      ,
      GPR_CASE = 6
      ,
      GPR_END = 7
      ,
      GPR_FOR = 8
      ,
      GPR_IS = 9
      ,
      GPR_LIMITED = 10
      ,
      GPR_PRIVATE = 11
      ,
      GPR_NULL = 12
      ,
      GPR_OTHERS = 13
      ,
      GPR_PACKAGE = 14
      ,
      GPR_RENAMES = 15
      ,
      GPR_TYPE = 16
      ,
      GPR_USE = 17
      ,
      GPR_PRAGMA = 18
      ,
      GPR_WHEN = 19
      ,
      GPR_WITH = 20
      ,
      GPR_EXTENDS = 21
      ,
      GPR_PAR_OPEN = 22
      ,
      GPR_PAR_CLOSE = 23
      ,
      GPR_SEMICOLON = 24
      ,
      GPR_COLON = 25
      ,
      GPR_COMMA = 26
      ,
      GPR_DOT = 27
      ,
      GPR_AMP = 28
      ,
      GPR_TICK = 29
      ,
      GPR_PIPE = 30
      ,
      GPR_ASSIGN = 31
      ,
      GPR_ARROW = 32
      ,
      GPR_STRING = 33
      ,
      GPR_NUMBER = 34
      ,
      GPR_LABEL = 35
      ,
      GPR_CHAR = 36
      ,
      GPR_COMMENT = 37
      ,
      GPR_WHITESPACE = 38
} gpr_token_kind;
typedef struct
{
   uint64_t version;
} *gpr_token_data_handler;
/*
 * Reference to a token in an analysis unit.
 */
typedef struct {
    /* Private data associated to this token, including stale reference
       checking data, or NULL if this designates no token.  */
    gpr_analysis_context context;
    gpr_token_data_handler token_data;

    /* Internal identifiers for this token.  */
    int token_index, trivia_index;

    gpr_token_kind kind;
    gpr_text text;
    gpr_source_location_range sloc_range;
} gpr_token;
/*
 * Array types incomplete declarations
 */

        

typedef struct gpr_gpr_node_array_record *gpr_gpr_node_array;
        



    typedef struct {
            gpr_internal_metadata md;
            gpr_env_rebindings_type rebindings;
            gpr_bool from_rebound;
    } gpr_internal_entity_info;
        



    typedef struct {
            gpr_base_node node;
            gpr_internal_entity_info info;
    } gpr_base_entity;
/* All the functions below can potentially raise an exception, so
   gpr_get_last_exception must be checked after them even
   before trying to use the returned value.  */


/*
 * Array types declarations
 */

        



/*

 */
struct gpr_gpr_node_array_record {
   int n;
   int ref_count;
   gpr_base_entity items[1];
};
        



/*
 * Return an array that contains the lexical parents, this node included iff
 * ``with_self`` is True. Nearer parents are first in the list.
 */
extern int gpr_gpr_node_parents(
    gpr_base_entity *node,

        
        gpr_bool
        with_self,

    gpr_gpr_node_array *value_p
);
        



/*
 * Return an array that contains the direct lexical children.
 *
 * .. warning:: This constructs a whole array every-time you call it, and as
 *    such is less efficient than calling the ``Child`` built-in.
 */
extern int gpr_gpr_node_children(
    gpr_base_entity *node,


    gpr_gpr_node_array *value_p
);
        



/*
 * Return the first token used to parse this node.
 */
extern int gpr_gpr_node_token_start(
    gpr_base_entity *node,


    gpr_token *value_p
);
        



/*
 * Return the last token used to parse this node.
 */
extern int gpr_gpr_node_token_end(
    gpr_base_entity *node,


    gpr_token *value_p
);
        



/*
 * Return the 0-based index for Node in its parent's children.
 */
extern int gpr_gpr_node_child_index(
    gpr_base_entity *node,


    int *value_p
);
        



/*
 * Return the node's previous sibling, or null if there is no such sibling.
 */
extern int gpr_gpr_node_previous_sibling(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * Return the node's next sibling, or null if there is no such sibling.
 */
extern int gpr_gpr_node_next_sibling(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * Return the analysis unit owning this node.
 */
extern int gpr_gpr_node_unit(
    gpr_base_entity *node,


    gpr_analysis_unit *value_p
);
        



/*
 * Return whether the node is a ghost.
 *
 * Unlike regular nodes, ghost nodes cover no token in the input source: they
 * are logically located instead between two tokens. Both the ``token_start``
 * and the ``token_end`` of all ghost nodes is the token right after this
 * logical position.
 */
extern int gpr_gpr_node_is_ghost(
    gpr_base_entity *node,


    gpr_bool *value_p
);
        



/*
 * Return a string containing the filename + the sloc in GNU conformant format.
 * Useful to create diagnostics from a node.
 */
extern int gpr_gpr_node_full_sloc_image(
    gpr_base_entity *node,


    gpr_string_type *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_ada_entity_kind_function``, ``gpr_ada_entity_kind_procedure``
 */
extern int gpr_ada_access_subp_f_subp_kind(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_access_subp_f_skips(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_pragma_f_skips(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_use_f_skips(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_with_f_has_limited(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_with_f_has_private(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_identifier``, ``gpr_prefix``
 */
extern int gpr_ada_with_f_packages(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_generic_f_skips(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_library_item_f_generic_stub(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_library_item_f_separate(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_library_item_f_main(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_identifier``,
 * ``gpr_prefix``
 */
extern int gpr_ada_main_f_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_pkg_f_has_private(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_ada_entity_kind_function``, ``gpr_ada_entity_kind_procedure``
 */
extern int gpr_ada_subp_f_subp_kind(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_prelude_f_context_clauses(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_prelude_f_library_item(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes: ``gpr_identifier``,
 * ``gpr_prefix``
 */
extern int gpr_ada_separate_f_parent_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_with_formal_f_kind(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_ada_with_formal_f_skips(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * Return whether this is an instance of AllQualifierPresent
 */
extern int gpr_all_qualifier_p_as_bool(
    gpr_base_entity *node,


    gpr_bool *value_p
);
        



/*

 */
extern int gpr_attribute_decl_f_attr_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_others_designator``, ``gpr_string_literal_at``
 */
extern int gpr_attribute_decl_f_attr_index(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field contains a list that itself contains one of the following nodes:
 * ``gpr_builtin_function_call``, ``gpr_string_literal_at``, ``gpr_terms``,
 * ``gpr_variable_reference``
 */
extern int gpr_attribute_decl_f_expr(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*

 */
extern int gpr_attribute_reference_f_attribute_name(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);
        



/*
 * This field can contain one of the following nodes:
 * ``gpr_others_designator``, ``gpr_string_literal``
 */
extern int gpr_attribute_reference_f_attribute_index(
    gpr_base_entity *node,


    gpr_base_entity *value_p
);