langkit/sustained/src/gpr_parser-implementation-c.ads


      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_parents";
   --  Return an array that contains the lexical parents, this node included
   --  iff ``with_self`` is True. Nearer parents are first in the list.

           
   

   
   

   function gpr_gpr_node_children
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_gpr_node_array) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_children";
   --  Return an array that contains the direct lexical children.
   --
   --  .. warning:: This constructs a whole array every-time you call it, and
   --     as such is less efficient than calling the ``Child`` built-in.

           
   

   
   

   function gpr_gpr_node_token_start
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_token) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_token_start";
   --  Return the first token used to parse this node.

           
   

   
   

   function gpr_gpr_node_token_end
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_token) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_token_end";
   --  Return the last token used to parse this node.

           
   

   
   

   function gpr_gpr_node_child_index
     (Node : gpr_base_entity_Ptr;


      Value_P : access int) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_child_index";
   --  Return the 0-based index for Node in its parent's children.

           
   

   
   

   function gpr_gpr_node_previous_sibling
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_previous_sibling";
   --  Return the node's previous sibling, or null if there is no such sibling.

           
   

   
   

   function gpr_gpr_node_next_sibling
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_next_sibling";
   --  Return the node's next sibling, or null if there is no such sibling.

           
   

   
   

   function gpr_gpr_node_unit
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_analysis_unit) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_unit";
   --  Return the analysis unit owning this node.

           
   

   
   

   function gpr_gpr_node_is_ghost
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_is_ghost";
   --  Return whether the node is a ghost.
   --
   --  Unlike regular nodes, ghost nodes cover no token in the input source:
   --  they are logically located instead between two tokens. Both the
   --  ``token_start`` and the ``token_end`` of all ghost nodes is the token
   --  right after this logical position.

           
   

   
   

   function gpr_gpr_node_full_sloc_image
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_string_type) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_gpr_node_full_sloc_image";
   --  Return a string containing the filename + the sloc in GNU conformant
   --  format. Useful to create diagnostics from a node.

           
   

   
   

   function gpr_ada_access_subp_f_subp_kind
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_access_subp_f_subp_kind";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Ada_Entity_Kind_Function`,
   --  :ada:ref:`Ada_Entity_Kind_Procedure`

           
   

   
   

   function gpr_ada_access_subp_f_skips
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_access_subp_f_skips";
   

           
   

   
   

   function gpr_ada_pragma_f_skips
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_pragma_f_skips";
   

           
   

   
   

   function gpr_ada_use_f_skips
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_use_f_skips";
   

           
   

   
   

   function gpr_ada_with_f_has_limited
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_with_f_has_limited";
   

           
   

   
   

   function gpr_ada_with_f_has_private
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_with_f_has_private";
   

           
   

   
   

   function gpr_ada_with_f_packages
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_with_f_packages";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_ada_generic_f_skips
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_generic_f_skips";
   

           
   

   
   

   function gpr_ada_library_item_f_generic_stub
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_library_item_f_generic_stub";
   

           
   

   
   

   function gpr_ada_library_item_f_separate
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_library_item_f_separate";
   

           
   

   
   

   function gpr_ada_library_item_f_main
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_library_item_f_main";
   

           
   

   
   

   function gpr_ada_main_f_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_main_f_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_ada_pkg_f_has_private
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_pkg_f_has_private";
   

           
   

   
   

   function gpr_ada_subp_f_subp_kind
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_subp_f_subp_kind";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Ada_Entity_Kind_Function`,
   --  :ada:ref:`Ada_Entity_Kind_Procedure`

           
   

   
   

   function gpr_ada_prelude_f_context_clauses
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_prelude_f_context_clauses";
   

           
   

   
   

   function gpr_ada_prelude_f_library_item
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_prelude_f_library_item";
   

           
   

   
   

   function gpr_ada_separate_f_parent_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_separate_f_parent_name";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Identifier`, :ada:ref:`Prefix`

           
   

   
   

   function gpr_ada_with_formal_f_kind
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_with_formal_f_kind";
   

           
   

   
   

   function gpr_ada_with_formal_f_skips
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_ada_with_formal_f_skips";
   

           
   

   
   

   function gpr_all_qualifier_p_as_bool
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_bool) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_all_qualifier_p_as_bool";
   --  Return whether this is an instance of AllQualifierPresent

           
   

   
   

   function gpr_attribute_decl_f_attr_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_attribute_decl_f_attr_name";
   

           
   

   
   

   function gpr_attribute_decl_f_attr_index
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_attribute_decl_f_attr_index";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Others_Designator`, :ada:ref:`String_Literal_At`

           
   

   
   

   function gpr_attribute_decl_f_expr
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_attribute_decl_f_expr";
   --  This field contains a list that itself contains one of the following
   --  nodes: :ada:ref:`Builtin_Function_Call`, :ada:ref:`String_Literal_At`,
   --  :ada:ref:`Terms`, :ada:ref:`Variable_Reference`

           
   

   
   

   function gpr_attribute_reference_f_attribute_name
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_attribute_reference_f_attribute_name";
   

           
   

   
   

   function gpr_attribute_reference_f_attribute_index
     (Node : gpr_base_entity_Ptr;


      Value_P : access gpr_base_entity) return int

      with Export        => True,
           Convention    => C,
           External_name => "gpr_attribute_reference_f_attribute_index";
   --  This field can contain one of the following nodes:
   --  :ada:ref:`Others_Designator`, :ada:ref:`String_Literal`

           
   

   
   
